List.getFirst requires Java 21
Signed-off-by: pizzi80 <paolo@given2.com>